--- a/ShoppingList/app/src/main/AndroidManifest.xml
+++ b/ShoppingList/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity"
+        <activity android:name=".ItemsMenu"
             android:label = "Items List"
             android:parentActivityName=".MainActivity">
             <meta-data
